--- a/ReadMe
+++ b/ReadMe
@@ -2,8 +2,10 @@ To do list:
 
 Review and revamp the data structure.
 
-Test for seven card poker comparisons.
-
-Add random constructor for PokerHand.
+Test for seven card poker comparisons. Continue testing.
 
 Add class Card, and add constructor for PokerHand from array of Cards.
+
+Add subfunction, print handmap to class "PokerHand".
+Add function, hand_strength to class "PokerHand".
+Modify function, compare, to get rid of the handmap and hand strength output.
